# Graph-Fusion-Experiment

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  TUTORIAL.md
models/: README.md
notebooks/: fusion_analysis.ipynb
patterns/: README.md  conv_patterns.yaml  transformer_patterns.yaml
results/: README.md
src/: __init__.py  benchmark.py  fusion_patterns.py  graph_analyzer.py  manual_fuser.py
tests/: test_fusion.py
